--- a/src/main/resources/templates/friendsSearch.html
+++ b/src/main/resources/templates/friendsSearch.html
@@ -91,7 +91,7 @@
 
     <div class="form-container">
         <!-- Form filled with search parameters -->
-        <div name="searchfriends">
+        <div>
             <form>
                 <div class="form-group">
                     <label for="name">Name</label>
@@ -147,6 +147,7 @@
             </div>
         </fieldset>
     </div>
+    <button type="submit">Search for friends</button>
 </div>
 <div class="user-list-container">
     <ul class="user-list">
@@ -157,8 +158,6 @@
         <li class="user">User 1</li>
         <li class="user">User 2</li>
         <li class="user">User 3</li>
-
-
     </ul>
 </div>
 
