--- a/src/main/resources/templates/friendsSearch.html
+++ b/src/main/resources/templates/friendsSearch.html
@@ -66,9 +66,6 @@
                 <a class="nav-link" href="#">Features</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item">
                 <a class="nav-link disabled" href="#">Disabled</a>
             </li>
         </ul>
@@ -91,6 +88,7 @@
 
     <div class="form-container">
         <!-- Form filled with search parameters -->
+        <!--Name and location search-->
         <div>
             <form>
                 <div class="form-group">
@@ -149,6 +147,7 @@
     </div>
     <button type="submit">Search for friends</button>
 </div>
+    <!--User list-->
 <div class="user-list-container">
     <ul class="user-list">
         <!-- List of users -->
