--- a/src/main/resources/templates/users/index.html
+++ b/src/main/resources/templates/users/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Users Panel</title>
+    <th:block th:replace="~{/fragments/header.html :: header}"></th:block>
 </head>
 <body>
-  Users Landing Page
-  <a href="/friend_requests">
-    <button>Friends</button>
-  </a>
+    <th:block th:replace="~{/fragments/navbar.html :: navbar}"></th:block>
+    <div class="container">
+        Users Panel
+    </div>
+    <th:block th:replace="~{/fragments/footer.html :: footer}"></th:block>
 </body>
 </html>
