Attempted to create / setup default html items

--- a/src/main/resources/templates/users/enrolled_paths.html
+++ b/src/main/resources/templates/users/enrolled_paths.html
@@ -2,15 +2,16 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns="http://www.w3.org/1999/html">
 <head>
-  <meta charset="UTF-8">
-  <title>Your paths</title>
-  <th:block th:replace="~{/fragments/header.html :: header}"></th:block>
+    <meta charset="UTF-8">
+    <title>Your paths</title>
+    <th:block th:replace="~{/fragments/header.html :: header}"></th:block>
 </head>
 <body>
 <th:block th:replace="~{/fragments/navbar.html :: navbar}"></th:block>
 <div class="container">
-  Users Panel
+    Users Panel
 </div>
 <th:block th:replace="~{/fragments/footer.html :: footer}"></th:block>
+<!-- TODO: Show achievements -->
 </body>
 </html>
