--- a/src/main/resources/templates/users/index.html
+++ b/src/main/resources/templates/users/index.html
@@ -7,10 +7,12 @@
     <th:block th:replace="~{/fragments/header.html :: header}"></th:block>
 </head>
 <body>
-    <th:block th:replace="~{/fragments/navbar.html :: navbar}"></th:block>
-    <div class="container">
-        Users Panel
-    </div>
-    <th:block th:replace="~{/fragments/footer.html :: footer}"></th:block>
+<th:block th:replace="~{/fragments/navbar.html :: navbar}"></th:block>
+<div class="container">
+    <a href="profile.html">Profile</a>
+</div>
+<th:block th:replace="~{/fragments/footer.html :: footer}"></th:block>
+<!--    TODO: User splash page, shows what's happening -->
+<!--    TODO: Show chat area -->
 </body>
 </html>
