--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -55,30 +55,32 @@
 <html lang="en" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
-  <th:block th:replace="~{fragments/header.html :: header}"></th:block>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
+    <th:block th:replace="~{fragments/header.html :: header}"></th:block>
 
-  <style>
-    .hexBg {
-      background-image: url("/img/lateral.png");
-      border-radius: 20px;
-    }
-    .submitBtn {
-      color: white;
-      /*border-color: #ffcb05;*/
-      /*border-width: 2px;*/
-      background-color: #2a75bb;
-      transition: .3s;
-    }
-    .submitBtn:hover {
-      background-color: #ffcb05;
-      color: #2a75bb
-    }
+    <style>
+        .hexBg {
+            background-image: url("/img/lateral.png");
+            border-radius: 20px;
+        }
 
-  </style>
+        .submitBtn {
+            color: white;
+            /*border-color: #ffcb05;*/
+            /*border-width: 2px;*/
+            background-color: #2a75bb;
+            transition: .3s;
+        }
+
+        .submitBtn:hover {
+            background-color: #ffcb05;
+            color: #2a75bb
+        }
+
+    </style>
 
 </head>
 
@@ -86,56 +88,67 @@
 <th:block th:replace="~{fragments/navbar.html :: navbar}"></th:block>
 
 <div class="container mt-5">
-  <div class="column" style="border-radius: 10px;">
-    <div class="row d-flex justify-content-center" th:text="${param.error != null ? 'Oops. There was an error logging in.' : ''}"/>
-    <div class="row d-flex justify-content-center" th:text="${param.logout != null ? 'You have logged out.' : ''}"/>
-    <div class="row d-flex justify-content-center" sec:authorize="isAuthenticated()" th:text="${param.logout == null && param.error == null ? 'You are logged in.' : ''}" />
-    <div class="row hexBg my-3">
-      <div class="col-4 m-0 shadow d-flex justify-content-center align-items-center">
-        <form class="d-flex justify-content-center align-items-center m-0 p-4 pe-0 rounded" sec:authorize="!isAuthenticated()" th:action="@{/login}" th:method="post">
-          <div class="card m-0" style="width: 18rem;">
-            <div class="card-body m-0">
-              <div class="card-text">
-                <div class="mb-3">
-                  <label for="username" class="form-label">Username</label>
-                  <input type="text" name="username" class="form-control" id="username" placeholder="Username">
-                </div>
-                <div class="mb-3">
-                  <label for="password" class="form-label">Password</label>
-                  <input type="password" name="password" placeholder="Password" class="form-control" id="password">
-                </div>
-              </div>
-              <div class="text-center">
-                <button type="submit" class="btn submitBtn" style="width: 100%;">Login</button>
-              </div>
-              <br>
-              <div class="row mt-5">
-                <div class="col text-center">
-                  <div class="row">
-                    <div class="col pe-0"><hr></div>
-                    <div class="col px-0">or</div>
-                    <div class="col ps-0"><hr></div>
-                  </div>
-                  <button id="regBtn" type="submit" class="btn submitBtn" style="width: 100%;">Register</button>
-                  <!--                                    <a href="/recover">Register</a>-->
-                </div>
-              </div>
+    <div class="column" style="border-radius: 10px;">
+        <div class="row d-flex justify-content-center"
+             th:text="${param.error != null ? 'Oops. There was an error logging in.' : ''}"/>
+        <div class="row d-flex justify-content-center" th:text="${param.logout != null ? 'You have logged out.' : ''}"/>
+        <div class="row d-flex justify-content-center" sec:authorize="isAuthenticated()"
+             th:text="${param.logout == null && param.error == null ? 'You are logged in.' : ''}"/>
+        <div class="row hexBg my-3">
+            <div class="col-4 m-0 shadow d-flex justify-content-center align-items-center">
+                <form class="d-flex justify-content-center align-items-center m-0 p-4 pe-0 rounded"
+                      sec:authorize="!isAuthenticated()" th:action="@{/login}" th:method="post">
+                    <div class="card m-0" style="width: 18rem;">
+                        <div class="card-body m-0">
+                            <div class="card-text">
+                                <div class="mb-3">
+                                    <label for="username" class="form-label">Username</label>
+                                    <input type="text" name="username" class="form-control" id="username"
+                                           placeholder="Username">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="password" class="form-label">Password</label>
+                                    <input type="password" name="password" placeholder="Password" class="form-control"
+                                           id="password">
+                                </div>
+                            </div>
+                            <div class="text-center">
+                                <button type="submit" class="btn submitBtn" style="width: 100%;">Login</button>
+                            </div>
+                            <br>
+                            <div class="row mt-5">
+                                <div class="col text-center">
+                                    <div class="row">
+                                        <div class="col pe-0">
+                                            <hr>
+                                        </div>
+                                        <div class="col px-0">or</div>
+                                        <div class="col ps-0">
+                                            <hr>
+                                        </div>
+                                    </div>
+                                    <button id="regBtn" type="submit" class="btn submitBtn" style="width: 100%;">
+                                        Register
+                                    </button>
+                                    <!--                                    <a href="/recover">Register</a>-->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </form>
             </div>
-          </div>
-        </form>
-      </div>
-      <div class="col-8 p-4">
-        <img src="/img/lift.webp" class="rounded" style="width: 100%">
-      </div>
+            <div class="col-8 p-4">
+                <img src="/img/lift.webp" class="rounded" style="width: 100%">
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 
 <script>
-  document.getElementById("regBtn").onclick = (e)=> {
-    e.preventDefault()
-    window.location.href="/register"
-  }
+    document.getElementById("regBtn").onclick = (e) => {
+        e.preventDefault()
+        window.location.href = "/register"
+    }
 </script>
 
 </body>
