--- a/src/main/resources/templates/users/profile.html
+++ b/src/main/resources/templates/users/profile.html
@@ -2,15 +2,17 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns="http://www.w3.org/1999/html">
 <head>
-  <meta charset="UTF-8">
-  <title>Your Profile</title>
-  <th:block th:replace="~{/fragments/header.html :: header}"></th:block>
+    <meta charset="UTF-8">
+    <title>Your Profile</title>
+    <th:block th:replace="~{/fragments/header.html :: header}"></th:block>
 </head>
 <body>
 <th:block th:replace="~{/fragments/navbar.html :: navbar}"></th:block>
 <div class="container">
-  Users Panel
+    Users Panel
 </div>
 <th:block th:replace="~{/fragments/footer.html :: footer}"></th:block>
+<!--  TODO: If user owns profile show controls-->
+<!--  TODO: Else show other user's profile-->
 </body>
 </html>
