Got hyperlinks workin'

--- a/src/main/resources/templates/users/friendsSearch.html
+++ b/src/main/resources/templates/users/friendsSearch.html
@@ -49,6 +49,7 @@
             flex: 1;
         }
     </style>
+    <th:block th:replace="~{/fragments/header.html :: header}"></th:block>
 </head>
 <body>
 <!-- Navbar -->
@@ -164,6 +165,7 @@
 
 <!-- Footer -->
 <footer class="footer">
+<th:block th:replace="~{/fragments/footer.html :: footer}"></th:block>
 </footer>
 </body>
 </html>
