--- a/src/main/resources/templates/users/friendsSearch.html
+++ b/src/main/resources/templates/users/friendsSearch.html
@@ -6,16 +6,16 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <title>Document</title>
     <style>
-        .navbar {
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-        }
-        .notification-bar {
-            width: 100%;
-            height: 50px;
-            background-color: lightgray;
-        }
+        /*.navbar {*/
+        /*    width: 100%;*/
+        /*    display: flex;*/
+        /*    justify-content: space-between;*/
+        /*}*/
+        /*.notification-bar {*/
+        /*    width: 100%;*/
+        /*    height: 50px;*/
+        /*    background-color: lightgray;*/
+        /*}*/
         .main-container {
             display: flex;
             height: calc(100% - 100px);
@@ -29,11 +29,11 @@
             width: 33.3%;
             background-color: lightgreen;
         }
-        .footer {
-            width: 100%;
-            height: 50px;
-            background-color: gray;
-        }
+        /*.footer {*/
+        /*    width: 100%;*/
+        /*    height: 50px;*/
+        /*    background-color: gray;*/
+        /*}*/
         .user-list-container {
             width: 100%;
             display: flex;
@@ -52,29 +52,30 @@
     <th:block th:replace="~{/fragments/header.html :: header}"></th:block>
 </head>
 <body>
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
-        </ul>
-    </div>
-</nav>
+<th:block th:replace="~{/fragments/navbar.html :: navbar}"></th:block>
+<!--&lt;!&ndash; Navbar &ndash;&gt;-->
+<!--<nav class="navbar navbar-expand-lg navbar-light bg-light">-->
+<!--    <a class="navbar-brand" href="#">Navbar</a>-->
+<!--    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">-->
+<!--        <span class="navbar-toggler-icon"></span>-->
+<!--    </button>-->
+<!--    <div class="collapse navbar-collapse" id="navbarNav">-->
+<!--        <ul class="navbar-nav">-->
+<!--            <li class="nav-item active">-->
+<!--                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>-->
+<!--            </li>-->
+<!--            <li class="nav-item">-->
+<!--                <a class="nav-link" href="#">Features</a>-->
+<!--            </li>-->
+<!--            <li class="nav-item">-->
+<!--                <a class="nav-link disabled" href="#">Disabled</a>-->
+<!--            </li>-->
+<!--        </ul>-->
+<!--    </div>-->
+<!--</nav>-->
 
-<!-- Notification bar -->
-<div class="notification-bar"></div>
+<!--&lt;!&ndash; Notification bar &ndash;&gt;-->
+<!--<div class="notification-bar"></div>-->
 
 <!-- Main container -->
 <div class="main-container">
