--- a/src/main/resources/templates/users/index.html
+++ b/src/main/resources/templates/users/index.html
@@ -47,10 +47,11 @@
     <div id="achv" class="row achv_box">
 
 
-        <div id="achv1" class="col-2 achv_badge_holder">
+        <div th:each="path : ${paths}" id="achv1" class="col-2 achv_badge_holder">
             <div class="achv_badge_3">
                 <div class="achv_badge_2">
-                    <img src="img/glutes.png" alt="Achievement Badge" width="128px" height="128px" class="achv_badge">
+<!--                        <img th:src="'data:image/jpeg;base64,'+${path.getImageDataUrl()}" alt="Achievement Badge" width="128px" height="128px" class="achv_badge">-->
+                    <span th:text="${path.getImageDataUrl()}"></span>
                 </div>
             </div>
         </div>
