--- a/src/main/resources/templates/users/index.html
+++ b/src/main/resources/templates/users/index.html
@@ -44,7 +44,7 @@
 
     <div id="achv" class="row achv_box">
 
-
+<!-- TODO: Make the paths medals clickable & Direct to Paths (JJ) -->
         <div th:each="path : ${paths}" id="achv1" class="col-2 achv_badge_holder">
             <div class="achv_badge_3">
                 <div class="achv_badge_2">
