--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -12,6 +12,7 @@
           <a th:href="@{/admin/index}">Create Paths</a> |
           <a th:href="@{/profile}">Profile</a> |
           <a th:href="@{/fsearch}">Friend Search</a> |
+          <a th:href="@{/chat}">Chat</a> |
         </container>
 <!--        TODO: Make the logout button show only when user is logged in/ else show log in (JJ)-->
         <div sec:authorize="isAuthenticated()">
