--- a/src/main/resources/templates/users/allPaths.html
+++ b/src/main/resources/templates/users/allPaths.html
@@ -10,13 +10,9 @@
 <th:block th:replace="~{/fragments/navbar.html :: navbar}"></th:block>
 <div class="container">
   <div th:each="path : ${paths}" id="achv1" class="col-2 achv_badge_holder">
-    <div class="achv_badge_3">
-      <div class="achv_badge_2">
         <a th:href="@{/paths/{id} (id=${path.id})}">
-          <img th:src="'data:image/jpeg;base64,'+${path.getImageDataUrl()}" alt="Achievement Badge" width="128px" height="128px" class="achv_badge">
+          <img th:src="'data:image/jpeg;base64,'+${path.getImageDataUrl()}" alt="Achievement Badge" width="128px" height="128px" class="achv_badge_solo">
         </a>
-      </div>
-    </div>
   </div>
 </div>
 <th:block th:replace="~{/fragments/footer.html :: footer}"></th:block>
