--- a/src/main/resources/templates/users/viewPath.html
+++ b/src/main/resources/templates/users/viewPath.html
@@ -19,7 +19,7 @@
         <div class="row">
             <div class="col-3">
                 <img th:src="'data:image/jpeg;base64,'+${path.getImageDataUrl()}" alt="Achievement Badge" width="256px"
-                     height="256px" class="path_image">
+                     height="256px" th:attr="class=${enrolled ? 'path_image_green' : 'path_image_red'}">
             </div>
             <div class="col-9">
                 <div th:text="${path.getDescription()}"/>
