--- a/src/main/resources/static/css/chat.css
+++ b/src/main/resources/static/css/chat.css
@@ -1,7 +1,7 @@
 #chat_icon{
     color: red;
     position: absolute;
-    bottom: 10px;
+    bottom: 40px;
     right: 30px;
     width: 48px;
     height: 48px;
@@ -15,6 +15,38 @@
 #main-chat{
     display: none;
     position: fixed;
-    bottom: 55px;
+    bottom: 87px;
     right: 10px;
+    background: lightgrey;
+    border-radius: 20px;
+    transition: all;
+    width: 1px;
+    height: 1px;
+    max-width: 200px;
+}
+
+#incoming_messages{
+    height: 300px;
+    /*width: 100%;*/
+    background: darkgrey;
+    overflow-y: scroll;
+    padding: 8px;
+}
+
+#chat_controls{
+    /*position: relative;*/
+    /*bottom: 0px;*/
+    /*left: 0px;*/
+}
+
+#message{
+    width: 92%;
+    padding-left: 3px;
+    padding-right: 3px;
+    margin-left: 8px;
+    margin-right: 8px;
+}
+
+#send{
+    display: none;
 }
