--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -15,5 +15,7 @@
   <!-- Main CSS -->
   <link href="/css/main.css" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+  <!--  //Chat stuff-->
+  <link rel="stylesheet" href="/css/chat.css">
 </th:block>
 </html>
