last working merge

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -111,6 +111,9 @@
               <div class="text-center">
                 <button type="submit" class="btn submitBtn" style="width: 100%;">Login</button>
               </div>
+              <div class="text-center mt-2">
+                <a href="/recover"><button type="button" class="btn submitBtn" style="width: 100%;">Recover Account</button></a>
+              </div>
               <br>
               <div class="row mt-5">
                 <div class="col text-center">
