--- a/src/main/resources/static/css/css.css
+++ b/src/main/resources/static/css/css.css
@@ -12,7 +12,7 @@
     display: flex;
     height: calc(100% - 100px);
 }
-.list-container {
+.friends-list {
     width: 66.6%;
     background-color: lightblue;
     overflow-y: scroll;
