--- a/src/main/resources/templates/landing.html
+++ b/src/main/resources/templates/landing.html
@@ -219,7 +219,7 @@
     <!-- Grid container -->
     <div class="container pt-4">
         <!-- Section: Social media -->
-        <section class="mb-4">
+        <section>
             <!-- Facebook -->
             <a
                     class="btn btn-link btn-floating btn-lg text-dark m-1"
@@ -285,10 +285,10 @@
     <!-- Grid container -->
 
     <!-- Copyright -->
-    <div class="text-center text-dark p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-        © 2020 Copyright:
-        <a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a>
-    </div>
+<!--    <div class="text-center text-dark p-3" style="background-color: rgba(0, 0, 0, 0.2);">-->
+<!--&lt;!&ndash;        © 2020 Copyright:&ndash;&gt;-->
+<!--&lt;!&ndash;        <a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a>&ndash;&gt;-->
+<!--    </div>-->
     <!-- Copyright -->
 </footer>
 
