--- a/src/main/resources/templates/users/index.html
+++ b/src/main/resources/templates/users/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns="http://www.w3.org/1999/html" lang="en">
+      xmlns="http://www.w3.org/1999/html" xmlns:sec="" lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Users Panel</title>
@@ -9,53 +9,61 @@
 <body>
 <th:block th:replace="~{/fragments/navbar.html :: navbar}"></th:block>
 <div class="container">
-    <!--        PROFILE PICTURE     -->
+    <div class="navbar bg-body-tertiary d-flex justify-content-end pe-3">
+        <span class="h2 me-auto ms-3"><i class="bi bi-person-badge me-3"></i>Profile</span>
+        <a href="/profile/settings" class="btn btn-light" style="float: right;">
+            <i class="bi bi-gear me-3"></i>Profile Settings
+        </a>
+    </div>
     <div class="row" style="padding-top: 50px">
-        <div class="col-4">
-            <img id="profile_image" src="/img/top_of_dog_face.jpeg" alt="Profile Image" width="360px" height="360px">
+        <div class="h6 ps-3">
+            <span th:unless="${user.lastName == null or user.firstName == null}" th:text="${user.firstName + ' ' + user.lastName}"/>
+            <span th:if="${user.lastName == null or user.firstName == null}">What's your name? <a href="/profile/settings">Set Now</a></span>
+
+            <!--If the user hasn't set their first and last name then display their username-->
+            <span th:if="${user.lastName == null or user.firstName == null}" th:text="${user.username}"></span>
+
+            <!-- Points section -->
+            <span th:unless="${user.totalPoints == null}" th:text="' | Total Health Points: ' + ${user.totalPoints}" />
         </div>
-        <!--            PROFILE DESCRIPTION     -->
-        <div class="col-8">
-            <div id="profile_description">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Nisl nunc mi ipsum faucibus. Ac tortor vitae purus faucibus ornare.
-                    Adipiscing at in tellus integer feugiat scelerisque varius morbi enim. Nisi vitae suscipit tellus
-                    mauris a diam maecenas sed. Vitae congue mauris rhoncus aenean vel elit scelerisque mauris. Et
-                    tortor at risus viverra adipiscing at. Vel facilisis volutpat est velit egestas dui id ornare arcu.
-                    Mattis ullamcorper velit sed ullamcorper morbi tincidunt. Pretium nibh ipsum consequat nisl vel
-                    pretium lectus. Convallis a cras semper auctor.
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Nisl nunc mi ipsum faucibus. Ac tortor vitae purus faucibus ornare.
-                    Adipiscing at in tellus integer feugiat scelerisque varius morbi enim. Nisi vitae suscipit tellus
-                    mauris a diam maecenas sed. Vitae congue mauris rhoncus aenean vel elit scelerisque mauris. Et
-                    tortor at risus viverra adipiscing at. Vel facilisis volutpat est velit egestas dui id ornare arcu.
-                    Mattis ullamcorper velit sed ullamcorper morbi tincidunt. Pretium nibh ipsum consequat nisl vel
-                    pretium lectus. Convallis a cras semper auctor.
-                </p>
-            </div>
+
+
+
+        <!-- Profile image -->
+        <div class="col-12 col-md-3">
+            <img id="profile_image" th:src="'data:image/jpeg;base64,' + ${user.profileImageDataUrl}" class="img-thumbnail" alt="Profile Image">
+        </div>
+
+        <!-- Bio Section -->
+        <div class="col-12 col-md-9 mt-3">
+            <!-- Set profile bio section -->
+            <div id="profile_description" th:text="${user.bio}"/>
+
+            <!--If their bio is not set yet, -->
+            <th:block th:if="${user.bio == null}">
+                You can write your bio in the Profile Settings tab.
+            </th:block>
         </div>
     </div>
 
-    <span th:text="'Total Points: ' + ${points}" />
-
-    <div id="achv" class="row achv_box">
-
-<!-- TODO: Make the paths medals clickable & Direct to Paths (JJ) -->
-        <div th:each="path : ${paths}" id="achv1" class="col-2 achv_badge_holder">
-            <div class="achv_badge_3">
-                <div class="achv_badge_2">
-                    <a th:href="@{/paths/{id} (id=${path.id})}">
-                        <img th:src="'data:image/jpeg;base64,'+${path.getImageDataUrl()}" alt="Achievement Badge" width="128px" height="128px" class="achv_badge">
-                    </a>
-                </div>
-            </div>
-        </div>
-
-
+    <div class="container">
+        <ul class="list-group mt-3" style="clear: both;">
+            <li class="list-group-item" th:each="item : ${user.followed_paths}">
+                <img style="border-radius: 50%;" width="40px" height="40px" th:src="'data:image/jpeg;base64,'+${item.imageDataUrl)}"/>
+                <span class="me-auto"><strong th:text="${item.title}"></strong></span>
+                <i class="bi bi-trash3-fill deleteBtn btn btn-warning ms-auto"   th:item="${item.getId()}"></i>
+                <i class="bi bi-pencil-fill editBtn btn btn-light me-2 ms-auto"  th:item="${item.getId()}"></i>
+            </li>
+            <li class="list-group-item" th:if="${user.followed_paths == null}"><i class="bi bi-info-square me-3"></i>You can find paths to follow in the "All Paths" tab.</li>
+        </ul>
+        <th:block th:if="${user.followed_paths.isEmpty()}">
+            <i class="bi bi-info-square me-4"></i>You are not following any paths, would you like to <a href="/allPaths">search</a> for one?
+        </th:block>
     </div>
+
+    <th:block th:replace="~{/fragments/chat.html :: main_chat}"/>
+
+
 </div>
 <th:block th:replace="~{/fragments/footer.html :: footer}"></th:block>
 </body>
