--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -28,7 +28,7 @@
                         </a>
                     </li>
                     <li>
-                        <a class="dropdown-item" sec:authorize="hasRole('ROLE_CLIENT')" th:href="@{/fsearch}">
+                        <a class="dropdown-item" sec:authorize="hasRole('ROLE_CLIENT')" th:href="@{/user/friend_requests}">
                             <i class="bi bi-search"></i><button type="button" class="btn w-100">Buddies</button>
                         </a>
                     </li>
