--- a/src/main/resources/templates/users/index.html
+++ b/src/main/resources/templates/users/index.html
@@ -46,7 +46,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container" th:if="${user.followed_paths != null}">
         <ul class="list-group mt-3" style="clear: both;">
             <li class="list-group-item" th:each="item : ${user.followed_paths}">
                 <img style="border-radius: 50%;" width="40px" height="40px" th:src="'data:image/jpeg;base64,'+${item.imageDataUrl)}"/>
